moved figure code

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -88,7 +88,7 @@ A further advantage of this method is that it can easily be extended to other sp
 For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide of 2019.  
 
 
-In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundance that account for component CU-level statuses: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Table \@ref(tab:candidateLRPs)), which are described below. Both of these LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data. Both of these LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
+In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundance that account for component CU-level statuses: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)), which are described below. Both of these LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data. Both of these LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
 
 \begin{figure}[ht]
 \centering
@@ -180,7 +180,7 @@ After providing parameter distributions describing the CU-level population dynam
       
 4. Identify the LRP as the mid-point of the aggregate abundance bin with a proportion of CUs above their lower benchmark that is closest to the desired probability threshold (e.g., 0.5, 0.66, 0.9, or 0.99).
 
-An example of candidate projection LRPs derived from the aggregate abundance of each bin plotted against the proportion of year-trial combinations where all CUs were above their lower benchmark is shown in Figure \@ref(fig:example-projectedCurve). The choice of 200 fish bins was a trade-off between increasing smoothness of the curve with bins covering smaller range in aggregate abundances and computational limitations of small bins requiring a very large numbers of stochastic simulations to allow for a sufficient number of year-trial combinations within each bin to stabilize results. Also, for our case studies, 200 fish was within the range of uncertainty in observed spawner abundances. 
+Examples of projection LRPs derived from the aggregate abundance of each bin plotted against the proportion of year-trial combinations where all CUs were above their lower benchmark is shown in Figure \@ref(fig:example-projectedCurve). The choice of 200 fish bins was a trade-off between increasing smoothness of the curve with bins covering smaller range in aggregate abundances and computational limitations of small bins requiring a very large numbers of stochastic simulations to allow for a sufficient number of year-trial combinations within each bin to stabilize results. Also, for our case studies, 200 fish was within the range of uncertainty in observed spawner abundances. 
 
 
 ```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected proportions of year-trial combinations where all CUs were above their lower benchmark as a function of aggregate SMU abundance, where aggregate abundances are shown in bins of 200 fish. Each dot in the curve represents a single combination of year and simulation trial. Coloured lines represent candidate LRPs calculated for 4 different probability thresholds, 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange). Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
