--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -106,7 +106,9 @@ In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level 
 (\#fig:LRP-types)
 \end{figure}
 
+<!-- CH removed from before \caption{} line
 
+-->
 
 
 ### Logistic regression LRPs {#logisticMethods}
@@ -166,7 +168,7 @@ The projection LRP approach uses population parameters of individual CUs within 
 
 One advantage of the approach for projection LRPs over logistic regression LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (In review) and provided online (see Appendix \@ref(app:links)).  
 
-After providing parameter distributions describing the CU-level population dynamics and exploitation to samSim, the projections included 4 main steps:
+After providing parameter distributions describing the CU-level population dynamics and exploitation to samSim, the projections included four main steps:
 
 1. Project spawner abundances forward for 30 years after an initialization period and over $nTrial$ stochastic simulations, where $nTrials$ was chosen to stabilize results.
    
