--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -21,13 +21,13 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 \node(1) [box, fill=blue!10] {1. Data compilation};
 \node(2) [box, fill=green!10, below of=1] {2. Assess CU data deficiency};
 \node(3) [box, fill=yellow!10, below of= 2] {3. Can data-deficient CUs be represented by CUs with data?};
-\node(4) [box, fill=pink!10, below of= 3] {4. What proportion of CUs above Red status is required to avoid serious harm? Default = 100\%};
-\node(5) [box, fill=cyan!10, below of= 4] {5. Assess status relative to proportional LRP};
-\node(6) [box, below of=5, fill=lime!10] {6. Peer-review of status relative to proportional LRP (including review of steps 1-5)};
+\node(4) [box, fill=cyan!10, below of= 3] {4. What proportion of CUs above Red status is required to avoid serious harm? Default = 100\%};
+\node(5) [boxgray, below of=4] {5. Assess status relative to proportional LRP};
+\node(6) [boxgray, below of=5] {6. Peer-review of status relative to proportional LRP (including review of steps 1-5)};
 \node(7) [box, below of=6, fill=magenta!10] {7. Are aggregate abundance LRPs required for fisheries management decisions?};
 \node(8) [box, below of=7, fill=brown!10, yshift=-1.7cm] {8. Estimate aggregate abundance LRPs\\(a) Identity acceptable probability of all CUs $>$ lower benchmarks\\(b)Choose logistic regression LRP and/or projection LRP, depending on which assumptions are met\\(c) Estimate LRP(s)};
 \node(8n) [boxno, right of=8, xshift=6cm, yshift=2.0cm] {Use proportional LRPs (step 5)};
-\node(9) [boxgray, below of=8, yshift=-1.7cm] {9. Compare status of aggregate abundance-based LRPs to status relative to proportion of CUs  (step 5)};
+\node(9) [boxgray, below of=8, yshift=-1.7cm] {9. Assess status relative to aggregate abundance LRP(s), and compare to that from proportional LRPs  (step 5)};
 \node(9n) [boxno, right of=9, xshift=6cm, yshift=1.0cm] {Aggregate abundance LRPs cannot be estimated};
 \draw[arrow] (1) -- (2);
 \draw[arrow] (2) -- (3);
@@ -40,7 +40,7 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 \draw[arrow] (8) -- node[anchor=east] {Assumptions met} (9);
 \draw[arrow] (8) -| node[anchor=west] {Assumptions not met} (9n);
 \end{tikzpicture}
-\caption{Steps for setting LRPs and assessing status} 
+\caption{Steps for setting LRPs and assessing status. Coloured boxes indicated those used in LRP estimation. Grey boxes indicate those used in the implementation of LRPs for status assessments. White boxes indicate when LRP methods are not recommended.} 
 (\#fig:flowchart)
 \end{figure}
 
