--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -18,23 +18,14 @@ In Press]
 
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
-
 \begin{itemize}
-
-\item The revised Fisheries Act includes new Fish Stocks provisions that introduced legal
-obligations to identify limit reference points for major fish stocks prescribed under regulation.
-
-\item Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock.
-
-\item Canada's Wild Salmon Policy, WSP, includes an objective to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), the focus of biological assessments under the WSP.
-
-\item The revised *Fisheries Act" indicates that a single LRP is required for each "Major Fish Stock",  defined as Stock Management Units (SMUs) for Pacific salmon, which are groups of CUs that are managed as a unit to achieve joint status.  
-
+\item The revised \emph{Fisheries} Act includes new Fish Stocks provisions that introduced legal
+obligations to identify limit reference points (LRPs) for major fish stocks prescribed under regulation.
+\item Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm occurs to the stock.
+\item Canada's Wild Salmon Policy (WSP) includes an objective to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting conservation units (CUs), the focus of biological assessments under the WSP.
+\item The revised \emph{Fisheries Act} indicates that a single LRP is required for each "Major Fish Stock",  defined as Stock Management Units (SMUs) for Pacific salmon, which are groups of CUs managed as a unit to achieve joint status.  
 \item This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain CUs within an SMU above their lower benchmarks under the WSP.
-
 \end{itemize}
-
-
 \end{tcolorbox}
 
 Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions experienced by the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks consistent with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
@@ -61,72 +52,99 @@ Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precaut
 
 Genetic and phenotypic diversity among among CUs is important because it allows for diversity in responses to threats and environmental drivers, contributing to the sustainability of the species and the ecosystem services they provide [@pricePortfolioSimplificationArising2021a].  Portfolio effects have been shown to dampen interannual variance in aggregate-level recruitment due to independent dynamics among component sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity may buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes. However, deterioration of portfolio effects have been observed for Pacific salmon in Canada due to synchronous declining trends in abundances related to changes in climate and marine and freshwater habitats, as well as fishing practices that have overfished weak stocks [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status: Green, Amber, and Red. These zones represent increasing conservation concern from Green to Red requiring increasing management intervention. The lower benchmark, delineating the Red and Amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada [holtIndicatorsStatusBenchmarks2009a; dfoCanadaPolicyConservation2005a]. In practice, CUs in the WSP Red status zone tend to align with Endangered or Threatened COSEWIC statuses, and Green with Not at Risk COSEWIC categories.<!--CH: added this for Sue. However, I don't think we can comment on the presence or size of buffer--> 
+Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status: Green, Amber, and Red. These zones represent increasing conservation concern from Green to Red requiring increasing management intervention. The lower benchmark, delineating the Red and Amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada [@holtIndicatorsStatusBenchmarks2009; @dfoCanadaPolicyConservation2005]. In practice, CUs in the WSP Red status zone tend to align with Endangered or Threatened COSEWIC statuses, and Green with Not at Risk COSEWIC categories.<!--CH: added this for Sue. However, I don't think we can comment on the presence or size of buffer--> 
 
 
 
-### SPATIAL SCALES
+### SPATIAL SCALES OF ASSESSMENT
 
-While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU in their Amber or Green status zones, i.e., above Red status under the WSP. 
+While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU in their Amber or Green status zones, i.e., above Red status. 
 
-Considering CU status is important, in part because threats on Pacific salmon act at a variety of spatial scales. The Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, but for Pacific salmon, threats and management actions can range from local freshwater habitats and estuaries to regional climate change in marine and freshwater environments. Also, multiple levers are used by managers to achieve objectives for Pacific salmon which extend beyond fisheries, including habitat restoration and hatchery enhancement which occur at a variety of spatial scales.  Indeed, for many SMUs, fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. These decisions require stock assessments and responses at a hierarchy of spatial scales from a watershed-level within CUs to larger aggregates of CUs at regional-scales, sometimes across Pacific salmon species. 
-
-Given the existing framework for assessing status of Pacific salmon by CUs [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU.
-
-Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligne with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with Conservation Units - the biological unit of conservation under DFO's WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety management decisions.
+In addition to biological reasons for assessing status at the spatial scale of CUs as described under the WSP, this scale is also relevant for key threats and management response of Pacific salmon, e.g., restoration of freshwater spawning or rearing habitat and hatchery enhancement. While the Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, for many SMUs fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. 
 
 
+Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against for LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. At finer spatial scales, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider distribution at sub-populations within CUs when those are considered to be important for the sustainability of the CU or SMU.
 
-## GOALS AND COMPONENTS OF THE WORKING PAPER
+Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely aligned with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are often not aligned with Conservation Units - the biological unit of conservation under DFO's WSP - and are not considered further here. Although the LRPs presented here are applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety management decisions.
 
-The goals of this working paper as outlined in the Terms of Reference were to:
 
-- Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the WSP objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (See Section \@ref(cu-est-methods))
 
-- Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See Section \@ref(est-methods) and Appendix \@ref(app:links)). More details are provided in companion paper, Holt et al. (In review).^[Holt et al. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review] 
+## GOALS, COMPONENTS, and SCOPE OF THE WORKING PAPER
 
-- Document key uncertainties that affect LRP estimates for each method considered, including uncertainties arising from missing or limited CU-level data. (See Section \@ref(recommendations))
+\begin{tcolorbox}[sharp corners, boxrule=0.2mm]
+\subsection*{Key Points:}
+\begin{itemize}
+\item The goals of this Working Paper are summarized as:
+\begin{itemize}
+\item Develop candidate methods for identifying LRPs for Pacific salmon that are consistent with the WSP objective of conserving biodiversity
+\item Document candidate methods for developing LRPs including data requirements and assumptions 
+\item Document key uncertainties that affect LRP estimates
+\item Provide guidance and recommendations on the application of candidate methods over a range of data types and availability
+\end{itemize}
+\item The sections of this Working Paper are as follows:
+\begin{itemize}
+\item \textbf{Section 1.} Introduction: Background and Goals
+\item \textbf{Section 2.} A review of reference points and their roles for Pacific salmon
+\item \textbf{Section 3.} Principles for the development of LRPs for Pacific salmon
+\item \textbf{Section 4.} Proposed LRP methods for Pacific salmon
+\item \textbf{Section 5.} Guidelines on the implementation of LRPs including recommendations on when, and when not to use candidate LRP methods
+\item \textbf{Section 6.} Recommendations on future research
+\end{itemize}
+\item This paper is scoped to focus on estimation of LRPs with guidelines and does not include a full quantitative evaluation of those LRPs. That step is included as important area of future research.
+\end{itemize}
+\end{tcolorbox}
 
-- Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (See Section \@ref(guidelines))
+### Goals
 
+The goals of this working paper and the companion working paper, Holt et al. (In review).^[Holt et al. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review] as outlined in the Terms of Reference were to:
+
+- Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the WSP objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (Section \@ref(cu-est-methods))
+
+- Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (Section \@ref(est-methods) and Appendix \@ref(app:links)). More details are provided in Holt et al. (In review).
+
+- Document key uncertainties that affect LRP estimates for each method considered, including uncertainties arising from missing or limited CU-level data. (Section \@ref(recommendations))
+
+- Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (Section \@ref(guidelines))
+
+### What's in this paper?
 
 This working paper addresses these four goals, while the companion Working Paper (Holt et al. In review) provides a more detailed and technical descriptions of candidate methods for developing LRPs and more fully demonstrates their implementation on three case studies. Summaries of methods and case studies are included here for the completeness of these guidelines.
 
 
-In particular, this paper has five components: 
+In particular, this paper has six sections: 
 
-1. A review of reference points and their roles for Pacific salmon (Section \@ref(review))
+1. Introduction (this Section)
 
-2. Principles for the development of LRPs for Pacific salmon (Section \@ref(principles))
+2. A review of reference points and their roles for Pacific salmon
 
-3. A tool kit of candidate LRP methods (Section \@ref(est-methods)), with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summaries their application to case studies.
+3. Principles for the development of LRPs for Pacific salmon
 
-4. Guidelines on the implementation of LRPs including recommendations on when, and when not to use each candidate LRP method (Section \@ref(guidelines))
+4. A description of candidate LRP methods, with further details in Holt et al. (In review). Appendix \@ref(app:case-studies) summaries their application to case studies
 
-5. Recommendations on future research (Section \@ref(recommendations))<!--CH maybe revise this-->
+5. Guidelines on the implementation of LRPs including recommendations on when, and when not to use each candidate LRP method
+
+6. Discussion of uncertainties and recommendations on future research 
 
 This work was lead by a technical working group composed of DFO and First Nations analysts with expertise and knowledge associated with the biological basis of serious harm and analytical to support the development and application of candidate methods for LRPs. The technical working group was not meant to be a venue for engagement or to capture stakeholder perspectives or socioeconomic objectives. These considerations are relevant when developing management responses to stock assessments, but not in the assessment of stock status using LRPs. 
 
 
-### SCOPE
+### Scope
 
 
 <!--CH: Sue suggested omitting: The LRPs considered here focus on characterizing serious harm to the stock based on levels and/or trends in spawner abundance. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could include a more thorough characterization of the nature of serious harm to salmon [as in @dfoUpdateAssessmentFramework2016].-->
 
-While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stocks provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stocks provisions is beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stocks provisions.
 
-Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes in Section \@ref(review) on the review of reference points, a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
+While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs.
 
-While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.], developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada. A full review of the Salmon Scanner is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
+Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
+
+Here, we follow recommendations of @withlerGeneticallyBasedTargets2018 on the biological assessments of hatchery-influenced populations under the WSP, as described in Section \@ref(est-methods). Following recent WSP assessments, we also removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds were available. A review of methods for estimating proportion of hatchery-origin spawners or accounting for them in biological assessments was beyond the scope of this study.
+
+Here we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, and have implemented this approach using the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.]. The Salmon Scanner was developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada (see Section \@ref(est-methods)). A full review of the Salmon Scanner is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
 
 Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with local knowledge holders, managers and stakeholders.
 
-Our applications of LRP methods to case studies are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
- 
-Here, we follow recommendations of @withlerGeneticallyBasedTargets2018 on the biological assessments of hatchery-influenced populations under the WSP, as described in Section \@ref(est-methods). Following recent WSP assessments, we also removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds were available. A review of methods for estimating proportion of hatchery-origin spawners or accounting for them in biological assessments was beyond the scope of this study.
-
-
-
+While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stocks provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stocks provisions is beyond our scope, and is a gap that warrants further discussion.  We highlight a few possible roles for LRPs below. We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stocks provisions.
 
 <!--CH: Not sure is the R chunk below is necessary? If we remove, do we need to add gpplot2, knitr, bookdown, devtools to index file? Leave for now-->
 
