--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -2,6 +2,12 @@
 
 ## KEY UNCERTAINTIES THAT AFFECT LRP ESTIMATES
 <!--CH: change names of LRPs according to decssion on Jan. 25-->
+\begin{tcolorbox}[sharp corners, boxrule=0.2mm]
+\subsection*{Key Points:}
+\begin{itemize} 
+\item ...
+\end{itemize}
+\end{tcolorbox}
 
 ### CU assessments
 
@@ -11,7 +17,7 @@ First, observations errors in spawner abundances, the proportion of hatchery-ori
 
 
 
-Second, in the estimation of benchmarks, statistical uncertainties can be represented with 95% confidence intervals derived analytically or with bootstrapping (or 95% credible intervals for Bayesian analyses).  Short time-series or those with insufficient contrast in spawner abundances can increase estimation uncertainties in benchmarks. For stock-recruitment based benchmarks in particular, observation errors in spawner abundances can bias benchmark estimates ('errors-in-variables'), as can correlations that occur when spawner abundance in a given year depends on recruitment in the previous generation [time-series biases, @waltersFisheriesEcologyManagement2004]. Uncertainties in percentile-based benchmarks can arise because of uncertainties in productivity and harvest rates required to categorize populations for benchmark identification  [as described in  @holtEvaluatingBenchmarksBiological2018]. Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; liermannUsingAccessibleWatershed2010] may arise due to its parameterization based on spawner-recruit data sets that are outdated (ending in 2000) and likely more productive compared with for populations in our case study. To address this uncertainty, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
+Second, in the estimation of benchmarks, statistical uncertainties can be represented with 95% confidence intervals derived analytically or with bootstrapping (or 95% credible intervals for Bayesian analyses).  Short time-series or those with insufficient contrast in spawner abundances can increase estimation uncertainties in benchmarks. For stock-recruitment based benchmarks in particular, observation errors in spawner abundances can bias benchmark estimates ('errors-in-variables'), as can correlations that occur when spawner abundance in a given year depends on recruitment in the previous generation [time-series biases, @waltersFisheriesEcologyManagement2004]. Uncertainties in percentile-based benchmarks can arise because of uncertainties in productivity and harvest rates required to categorize populations for benchmark identification  [as described in  @holtEvaluatingBenchmarksBiological2018]. Uncertainties in benchmarks derived from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006; @liermannUsingAccessibleWatershed2010] may arise due to its parameterization based on spawner-recruit data sets that are outdated (ending in 2000) and likely more productive compared with for populations in our case study. To address this uncertainty, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
 
 
 
@@ -68,6 +74,13 @@ One difference between projection and logistic regression LRPs is that for proje
 
 ## IMPACT OF MISSING CUS ON SMU-LEVEL STATUS
 
+\begin{tcolorbox}[sharp corners, boxrule=0.2mm]
+\subsection*{Key Points:}
+\begin{itemize} 
+\item ...
+\end{itemize}
+\end{tcolorbox}
+
 For proportional LRPs,  we recommend SMU status be either provisional or data deficient when an SMU contains data-deficient CUs and remaining data-rich CUs are above Red Status, due to possible positive biases in status based on data-rich CUs alone.  Provisional status can be assigned to SMUs where data-rich CUS are representative of data-deficient CUs, and data-deficient SMU status can be assigned where data-rich CUs are not representative (Table \@ref(tab:GuidanceDDCUs)). In these cases, the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above the Red zone, but cannot improve status to above 100%. The power to detect a breach of a proportional LRP is relatively weak when the sample size of data-rich CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs within an SMU tend to provide more optimistic status than those that include a larger sample of CUs for proportional LRPs, as shown for Inside South Coast Chum case study. 
 
 In contrast, if the LRP of 100% of CUs above Red status has been breached for an SMU with data-deficient CUs, the inclusion of additional CUs may further deplete or improve status defined as the percentage of CUs above Red status, but will not increase status to above the LRP of 100%. This scenario reflects higher certainty in status. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.
@@ -78,6 +91,13 @@ For aggregate abundance LRPs we recommend that SMU status be provisional when SM
 
 
 ## FUTURE RESEARCH
+
+\begin{tcolorbox}[sharp corners, boxrule=0.2mm]
+\subsection*{Key Points:}
+\begin{itemize} 
+\item ...
+\end{itemize}
+\end{tcolorbox}
 
 We recommend future research on the impacts of temporal trends in underlying population parameters (e.g. productivity), adapting LRPs to include a broader scope for serious harm, and the evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty, as described in more detail below. We highlight time-varying parameters due to their pervasiveness in Pacific salmon dynamics and documented impacts on reference points.
 
